cleanup, refactor consolidations